# arbitrage_bot

./: .gitignore  Cargo.toml
abis/: curve_abi.json  curve_tricrypto_abi.json  uniswap_abi.json
src/: curve.rs  dex.rs  main.rs  tokens.rs
