[package]
name = "arbitrage_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
ethers-core = "2.0.14"
ethers-providers = "2.0.14"
ethers-contract = "2.0.14"
ethers-middleware = "2.0.14"
ethers = "2.0.14"
dotenv = "0.15"
serde_json = "1.0"
colored = "2.1"
once_cell = "1.17"